--- a/reset.css
+++ b/reset.css
@@ -1,68 +1,42 @@
-﻿/* KISSY CSS Reset
+/* KISSY CSS Reset
 理念：清除和重置是紧密不可分的
 特色：1.适应中文 2.基于最新主流浏览器
 维护：玉伯(lifesinger@gmail.com), 正淳(ragecarrier@gmail.com)
 */
+
 
 /*kimi修改*/
 
 
 /* 清除内外边距 */
 
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-p,
-blockquote,
-
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote,
 /* structural elements 结构元素 */
 
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-
+dl, dt, dd, ul, ol, li,
 /* list elements 列表元素 */
 
 pre,
-
 /* text formatting elements 文本格式元素 */
 
-fieldset,
-lengend,
-button,
-input,
-textarea,
-
+fieldset, lengend, button, input, textarea,
 /* form elements 表单元素 */
 
-th,
-td {
+th, td {
     /* table elements 表格元素 */
     margin: 0;
     padding: 0;
 }
 
 
-/* 设置默认字体 */
+/* 设置默认字体 */   /*kimi删除*/
 
-body,
-button,
-input,
-select,
-textarea {
+/*body, button, input, select, textarea {*/
     /* for ie */
     /*font: 12px/1 Tahoma, Helvetica, Arial, "宋体", sans-serif;*/
-    font: 12px/1 Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;
+    /*font: 12px/1 Tahoma, Helvetica, Arial, "\5b8b\4f53", sans-serif;*/
     /* 用 ascii 字符表示，使得在任何编码下都无问题 */
-}
+/*}*/
 
 h1 {
     font-size: 18px;
@@ -77,28 +51,18 @@ h3 {
     font-size: 14px;
 }
 
-h4,
-h5,
-h6 {
+h4, h5, h6 {
     font-size: 100%;
 }
 
-address,
-cite,
-dfn,
-em,
-var {
+address, cite, dfn, em, var {
     font-style: normal;
 }
 
 
 /* 将斜体扶正 */
 
-code,
-kbd,
-pre,
-samp,
-tt {
+code, kbd, pre, samp, tt {
     font-family: "Courier New", Courier, monospace;
 }
 
@@ -115,9 +79,9 @@ small {
 
 /* 重置列表元素 */
 
-ul,
-ol {
+ul, ol {
     list-style: none;
+    list-style-position: inside;
 }
 
 
@@ -125,22 +89,21 @@ ol {
 
 a {
     text-decoration: none;
-    color: inherit; /*kimi添加，a元素颜色继承，需手动自定义颜色*/
+    color: inherit;
+    /*kimi添加，a元素颜色继承，需手动自定义颜色*/
 }
 
 a:hover {
     text-decoration: underline;
 }
 
-abbr[title],
-acronym[title] {
+abbr[title], acronym[title] {
     /* 注：1.ie6 不支持 abbr; 2.这里用了属性选择符，ie6 下无效果 */
     border-bottom: 1px dotted;
     cursor: help;
 }
 
-q:before,
-q:after {
+q:before, q:after {
     content: '';
 }
 
@@ -154,8 +117,7 @@ legend {
 
 /* for ie6 */
 
-fieldset,
-img {
+fieldset, img {
     border: none;
 }
 
@@ -165,12 +127,11 @@ img {
 
 /* 注：optgroup 无法扶正 */
 
-button,
-input,
-select,
-textarea {
-    outline: none; /*kimi添加，去除获取焦点时默认outline，可以通过修改:focus时border实现同样效果*/
-    box-sizing: content-box; /*kimi添加，让表单控件和其他元素保持一致*/
+button, input, select, textarea {
+    outline: none;
+    /*kimi添加，去除获取焦点时默认outline，可以通过修改:focus时border实现同样效果*/
+    box-sizing: content-box;
+    /*kimi添加，让表单控件和其他元素保持一致*/
     font-size: 100%;
     /* 使得表单元素在 ie 下能继承字体大小 */
 }
@@ -193,7 +154,10 @@ hr {
 
 
 /* 让非ie浏览器默认也显示垂直滚动条，防止因滚动条引起的闪烁 */
+
+
 /*kimi删除*/
+
 
 /*html {
     overflow-y: scroll;
