--- a/public.css
+++ b/public.css
@@ -1,7 +1,7 @@
-@charset "UTF-8";
 /*public*/
-body{
-    font-family: "微软雅黑";
+.wrapper{
+    width: @wrapper;
+    margin: 0 auto;
 }
 .clearfix{
     *zoom:1;
@@ -10,10 +10,6 @@ body{
     content: "";
     display: block;
     clear: both;
-}
-.wrapper{
-    width: 1180px;
-    margin: 0 auto;
 }
 .fl{
     float: left;
@@ -27,3 +23,4 @@ body{
 .pa{
     position: absolute;
 }
+/*public end*/
